# cgw-to-anki-scraper

./: .gitignore  README.md  main.py  pyproject.toml  templates.py
.github/workflows/: ci.yml
tests/: test_main.py
