[project]
name = "cgw-to-anki-script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "genanki>=0.13.1",
    "ipykernel>=7.1.0",
    "nodriver>=0.48.1",
    "pypinyin>=0.55.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "ty>=0.0.10",
]
[tool.ty.src]
exclude = ["*.ipynb", ".ipynb_checkpoints", "tests/*"]

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    # "E",        # PyCodeStyle errors - disabled for now, only linelength
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can change due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
]

[tool.pytest.ini_options]
# Minimum required pytest version
minversion = "9.0"

# -rA: Show summary of all tests (passes, failures, errors, skips)
# --strict-markers: Error if you use a marker not defined in 'markers' (prevents typos)
addopts = "-rA --strict-markers"

testpaths = [
    "tests"
]
# No custom test markers yet, so omit

filterwarnings = [
    "error",                        # Turn all warnings into errors (strict mode)
]
